--- a/Akibkhan_portfolio.com.html
+++ b/Akibkhan_portfolio.com.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><A:link>Sahil Khan Portfolio</A:link></title>
+    <title><A:link>Sahil khan Portfolio</A:link></title>
     <link rel="stylesheet" href="style.css">
     <style>
         body {
@@ -1163,5 +1163,6 @@
 
 </body>
 </html>
+
 
 
